Make hiding sidenav backdrop media query based. Fixed baselayers panel z-index level.

--- a/css/app.css
+++ b/css/app.css
@@ -1285,6 +1285,10 @@ md-bottom-sheet .content {
     #layout .layout-row {
         position: relative
     }
+
+    md-backdrop.md-sidenav-backdrop {
+        display: none;
+    }
 }
 
 #permalink-link {
